fix: remove dark mode styles from new layout

--- a/wp-content/themes/locks/css/input.css
+++ b/wp-content/themes/locks/css/input.css
@@ -1,7 +1,7 @@
-@tailwind base;
+/*@tailwind base;
 @tailwind components;
 @tailwind utilities;
-
-.collapse {
-    /* Empty definition to effectively disable the class */
-}
+*/
+@import 'tailwindcss/base';
+@import 'tailwindcss/components';
+@import 'tailwindcss/utilities';
